--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 streamlit>=1.29.0
 pandas>=2.1.3
 numpy>=1.26.2
+mysql-connector-python>=8.2.0
+python-dotenv>=1.0.0
 requests>=2.31.0
 beautifulsoup4>=4.12.2
 lxml>=4.9.3
